PR6967: fix s390x compilation error re on_each_cpu